perf(board): Further improved layzy loading by adding another API endpoint for only OPEN issues and adapted backlog rendering
